--- a/CWC_project/client/src/components/Board.css
+++ b/CWC_project/client/src/components/Board.css
@@ -57,7 +57,7 @@ body {
 .title-container {
     width: 99.8%;
     margin: 0 auto;
-    background: #f7fcff;
+    background: #f9fcfd;
     border: 1px solid rgb(255, 255, 255);
     border-radius: 5px;
     padding-bottom: 30px;
