--- a/CWC_project/client/src/components/Card.css
+++ b/CWC_project/client/src/components/Card.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
 .Card {
+
   color: white;
   background-color: #1a1c1e;
   border-radius: 20px;
@@ -55,14 +61,16 @@
   display: inline-block;
   width: 42%;
   margin: 0.45rem;
+  margin-top: 1.1rem;
   border-radius: 10px;
-  font-size: 16px;
-  font-weight: 500;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 0.9rem;
+  font-weight: 400;
   padding: 7px 5px;
   color: white;
   text-align: center;
-  background-color: rgb(32, 129, 226);
-  border: 1px solid rgb(32, 129, 226);
+  background-color: #0d6efd;
+  border: 1px solid #0d6efd;
   transition: box-shadow 0.25s ease-in-out;
 }
 .Card__button button:hover {
