--- a/CWC_project/client/src/components/Board.css
+++ b/CWC_project/client/src/components/Board.css
@@ -112,7 +112,7 @@ body {
 
 .logo-name {
     background-color: #282c34;
-    min-height: 40vh;
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -121,6 +121,7 @@ body {
     font-weight: 700;
     font-size: calc(30px + 2vmin);
     color: white;
+    margin-top: 0px;
 }
 
 .logo-paragrph {
