--- a/CWC_project/client/src/components/Board.css
+++ b/CWC_project/client/src/components/Board.css
@@ -14,27 +14,55 @@ body {
 .post-container {
     margin: 0 auto;
     width: 95%;
-    border: 1px solid rgb(206, 206, 206);
-    padding: 10px 0 30px 0;
+    border: 0.1em solid rgb(215, 237, 255);
+    padding: 10px 0 10px 0;
     border-radius: 5px;
     margin-bottom : 50px;
+    background: rgb(249, 251, 253);
   }
 
 .post {
-    margin: 0 auto;
+    /* margin: 15px; */
     width: 90%;
+    height: 100%;
     border: 1px solid rgb(206, 206, 206);
     padding: 10px 0 10px 0;
     border-radius: 5px;
-    margin-bottom : 55px;
-    margin-top : 55px;
+    margin-bottom : 40px;
+    margin-top : 40px;
+    margin-left: 50px;
+    margin-right: 50px;
+    background: white;
 
 } 
 
+.content {
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 14px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding-bottom: 50px;
+}
+
+
+
 .title {
   font-family: 'Noto Sans', sans-serif;
-  font-size: 25px;
+  font-size: 17px;
 }
+
+.username {
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 700;
+  color: #444444;
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+
 
 .like{
   font-family: 'Noto Sans', sans-serif;
@@ -57,16 +85,28 @@ body {
 .title-container {
     width: 99.8%;
     margin: 0 auto;
-    background: #f7fcff;
+    background: rgb(249, 251, 253);
     border: 1px solid rgb(255, 255, 255);
     border-radius: 5px;
     padding-bottom: 30px;
 
 }  
 
-.ck.ck-editor__editable:not(.ck-editor__nested-editable) {
+.content-input {
+  width: 80%;
+  height: 100px;
+  margin: 10px;
+
+}
+
+.username-input {
+  width: 80%;
+}
+
+
+/* .ck.ck-editor__editable:not(.ck-editor__nested-editable) {
     min-height: 500px;
-  }
+  } */
 
 /* welcome page */
 
