--- a/CWC_project/client/src/components/Board.css
+++ b/CWC_project/client/src/components/Board.css
@@ -130,6 +130,8 @@ body {
     font-size: calc(7px + 2vmin);
     color: white;
     padding: 0 70px 0 70px;
+    margin-left: 90px;
+    margin-right: 90px;
 }
 
 .welcome-page {
@@ -140,7 +142,7 @@ body {
     border-radius: 5px;
     margin-bottom : 50px;
     font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: 30px;
     background: linear-gradient( 45deg, #0d6efd, #6309ca );
     color : white;
 
