--- a/CWC_project/client/src/components/Board.css
+++ b/CWC_project/client/src/components/Board.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nanum+Myeongjo:wght@400;800&family=Noto+Sans+KR:wght@100;400;700&family=Noto+Serif+KR&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Song+Myung&display=swap');
+
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Nanum Myeongjo', serif;
+font-family: 'Noto Sans KR', sans-serif;
+font-family: 'Noto Serif KR', serif;
+font-family: 'Quattrocento Sans', sans-serif;
+font-family: 'Song Myung', serif; */
 
 .Board {
     text-align: center;
@@ -10,7 +18,17 @@ body {
     margin: 0;
     background: #fff;
   }
-  
+
+/* hr {
+  height:1px; 
+  border:none; 
+  color:#000; 
+  background-color:#000; 
+  width:100%; 
+  text-align:right; 
+  margin: 0 0 0 auto;} */
+
+
 .post-container {
     margin: 0 auto;
     width: 95%;
@@ -24,7 +42,7 @@ body {
 .post {
     /* margin: 15px; */
     width: 90%;
-    height: 100%;
+    position: relative;
     border: 1px solid rgb(206, 206, 206);
     padding: 10px 0 10px 0;
     border-radius: 5px;
@@ -33,34 +51,71 @@ body {
     margin-left: 50px;
     margin-right: 50px;
     background: white;
-
 } 
 
+
+
+.title {
+  font-family: 'Nanum Myeongjo', serif;
+  font-size: 34px;
+  font-weight: 700;
+  color: #282c34;
+  padding: 5px 10px;
+	background-color: rgb(255, 255, 255);
+	text-align: center;
+	position: absolute;
+	top: 10%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+  margin-top: 30px;
+}
+
 .content {
+  width: 800px;
+  font-family: 'Noto Serif KR', serif;
+  font-size: 28px;
+  color: #282c34;
+  padding: 5px 10px;
+	background-color: rgb(255, 255, 255);
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+}
+
+
+
+/* .content {
+  width: 100%;
+  position: relative;
   font-family: 'Noto Sans', sans-serif;
   font-size: 14px;
+  color: black;
   margin-top: 50px;
   margin-bottom: 50px;
   margin-left: 50px;
   margin-right: 50px;
   padding-bottom: 50px;
+  
 }
-
-
 
 .title {
   font-family: 'Noto Sans', sans-serif;
   font-size: 17px;
+  color:black;
 }
 
 .username {
+  position: absolute;
   font-family: 'Noto Sans', sans-serif;
   font-weight: 700;
   color: #444444;
   font-size: 14px;
   margin-top: 10px;
   margin-bottom: 20px;
-}
+  width: 50%;
+} */
 
 
 
@@ -69,12 +124,14 @@ body {
   font-size: 19px;
 }
 
-.form-wrapper{
-    width: 95%;
-    margin: 0 auto;
-    border: 1px solid rgb(206, 206, 206);
-    border-radius: 5px;
-  }
+.write {
+  width: 100%;
+  font-family: 'Noto Serif KR', serif;
+  font-size: 20px;
+  color: #282c34;
+  margin-bottom: 40px;
+
+}
   
 .title-input {
     width: 80%;
@@ -88,6 +145,7 @@ body {
     background: rgb(249, 251, 253);
     border: 1px solid rgb(255, 255, 255);
     border-radius: 5px;
+    padding-top: 35px;
     padding-bottom: 30px;
 
 }  
@@ -99,10 +157,18 @@ body {
 
 }
 
-.username-input {
+/* .username-input {
   width: 80%;
-}
+} */
 
+.form-wrapper {
+  width: 95%;
+  margin: 10px auto;
+  border: 1px solid rgb(206, 206, 206);
+  border-radius: 5px;
+  margin-bottom: 40px;
+  margin-top: -11px;
+}
 
 /* .ck.ck-editor__editable:not(.ck-editor__nested-editable) {
     min-height: 500px;
@@ -117,7 +183,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-family: 'Quattrocento Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: calc(30px + 2vmin);
     color: white;
@@ -125,11 +191,11 @@ body {
 }
 
 .logo-paragrph {
-    font-family: 'Quattrocento Sans', sans-serif;
+    font-family: 'Noto Serif KR', serif;
     font-weight: 700;
     font-size: calc(7px + 2vmin);
     color: white;
-    padding: 0 70px 0 70px;
+    padding: 30px 70px 0 70px;
     margin-left: 90px;
     margin-right: 90px;
 }
@@ -137,14 +203,21 @@ body {
 .welcome-page {
     margin: 0 auto;
     width: 95%;
+    height: 100%;
     border: 1px solid rgb(219, 219, 219);
-    padding: 50px 0 50px 0;
+    padding: 80px 0 80px 0;
     border-radius: 5px;
-    margin-bottom : 50px;
+    margin-bottom : 30px;
+    margin-top: 35px;
     font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
+    font-size: 25px;
     background: linear-gradient( 45deg, #0d6efd, #6309ca );
     color : white;
+
+}
+
+.discussion-page{
+  padding: 30px 0 30px 0;
 
 }
 
@@ -194,6 +267,7 @@ button {
   color: var(--button-color);
   
   margin: 20px;
+  margin-bottom: 30px;
   padding: 0.5rem 1rem;
   
   font-family: 'Noto Sans KR', sans-serif;
