--- a/CWC_project/client/src/components/Board.css
+++ b/CWC_project/client/src/components/Board.css
@@ -36,14 +36,14 @@ body {
     padding: 10px 0 10px 0;
     border-radius: 5px;
     margin-bottom : 50px;
-    background: rgb(249, 251, 253);
+    background: rgb(253, 253, 253);
   }
 
 .post {
     /* margin: 15px; */
     width: 90%;
     position: relative;
-    border: 1px solid rgb(206, 206, 206);
+    border: 1px solid rgb(233, 233, 233);
     padding: 10px 0 10px 0;
     border-radius: 5px;
     margin-bottom : 40px;
@@ -126,7 +126,8 @@ body {
 
 .write {
   width: 100%;
-  font-family: 'Noto Serif KR', serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
   font-size: 20px;
   color: #282c34;
   margin-bottom: 40px;
@@ -142,7 +143,7 @@ body {
 .title-container {
     width: 99.8%;
     margin: 0 auto;
-    background: rgb(249, 251, 253);
+    background: rgb(253, 253, 253);
     border: 1px solid rgb(255, 255, 255);
     border-radius: 5px;
     padding-top: 35px;
@@ -164,7 +165,7 @@ body {
 .form-wrapper {
   width: 95%;
   margin: 10px auto;
-  border: 1px solid rgb(206, 206, 206);
+  border: 1px solid rgb(224, 224, 224);
   border-radius: 5px;
   margin-bottom: 40px;
   margin-top: -11px;
@@ -191,7 +192,7 @@ body {
 }
 
 .logo-paragrph {
-    font-family: 'Noto Serif KR', serif;
+    font-family: 'Noto sans KR', serif;
     font-weight: 700;
     font-size: calc(7px + 2vmin);
     color: white;
