--- a/CWC_project/client/src/components/Home.css
+++ b/CWC_project/client/src/components/Home.css
@@ -13,7 +13,7 @@ body {
 
   /* mainpage web3 logo */
 
-.h1-gradient {
+.home-h1-gradient {
     min-height: 50vh;
     display: flex;
     flex-direction: column;
@@ -28,7 +28,7 @@ body {
     
 }
 
-.dot {
+.home-dot {
     position :absolute;
     left: 50%;
     top : 50%;
@@ -40,7 +40,7 @@ body {
     height: 900px;
   }
 
-.small_text {
+.home-small_text {
   position: absolute;
   top: 36%;
   left:0%;
@@ -52,14 +52,14 @@ body {
 }
 
 /* homepage */
-.homepage {
+.home-homepage {
     width: 100%;
     height: 1000px;
     background: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
     padding: 50px 0 50px 0;
 }
 
-.home-text {
+.home-home-text {
     /* background-color: #282c34; */
     min-height: 50vh;
     display: flex;
@@ -77,7 +77,7 @@ body {
 
 }
 
-.home-paragrph {
+.home-home-paragrph {
     min-height: 50vh;
     display: flex;
     flex-direction: column;
@@ -97,7 +97,7 @@ body {
 }
 
 /* //teampage */
-.mypage-css {
+.home-mypage-css {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -111,14 +111,14 @@ body {
 	transform: translate( 0%, 10% );
 }
 
-.homepage-image {
+.home-homepage-image {
     width: 100%;
     height: 1000px;
     background: #fffcff;
     padding: 50px 0 50px 0;
 }
 
-.team-text {
+.home-team-text {
     /* background-color: #282c34; */
     min-height: 50vh;
     display: flex;
@@ -136,7 +136,7 @@ body {
 
 }
 
-.team-paragrph {
+.home-team-paragrph {
     min-height: 50vh;
     display: flex;
     flex-direction: column;
@@ -154,7 +154,7 @@ body {
     margin-right:90px;
 }
 
-.home-container {
+.home-home-container {
     margin: 0 auto;
     width: 100%;
   }
