--- a/CWC_project/client/src/components/Button.css
+++ b/CWC_project/client/src/components/Button.css
@@ -1,6 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
   --primary: #fff;
@@ -12,8 +13,9 @@
   outline: none;
   border: none;
   cursor: pointer;
-  font-family: "Quattrocento Sans", sans-serif;
-  font-weight: 400;
+  font-family: 'Quattrocento Sans', sans-serif;
+  font-weight: 700;
+  border-radius: 4px;
 }
 
 .btn-primary {
@@ -21,6 +23,7 @@
   color: #242424;
   border: 1px solid var(--primary);
   font-family: "Quattrocento Sans", sans-serif;
+
 }
 
 .btn-outline {
@@ -33,7 +36,7 @@
 
 .btn-medium {
   padding: 8px 20px;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .btn-large {
