--- a/CWC_project/client/src/components/Footer.css
+++ b/CWC_project/client/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-  margin-top: 10vh;
+  /* margin-top: 10vh; */
   background-color: #242424;
   padding: 4rem 0 2rem 0;
   display: flex;
@@ -93,11 +93,13 @@
   display: flex;
   align-items: center;
   margin-bottom: 16px;
+  font-family: "Quattrocento Sans", sans-serif;
 }
 
 .website-rights {
   color: #fff;
   margin-bottom: 16px;
+  font-family: "Quattrocento Sans", sans-serif;
 }
 
 @media screen and (max-width: 820px) {
