--- a/CWC_project/client/src/views/Board.css
+++ b/CWC_project/client/src/views/Board.css
@@ -41,6 +41,7 @@ body {
 .post {
   /* margin: 15px; */
   width: 90%;
+  height: 800px;
   position: relative;
   border: 1px solid rgb(233, 233, 233);
   padding: 10px 0 10px 0;
@@ -210,139 +211,10 @@ body {
   padding: 30px 0 30px 0;
 }
 
-/* thumbsup & reply button */
-
-.thumbsup-reply-button {
-  margin: 0 auto;
-  width: 80%;
-  border: 1px solid rgb(255, 255, 255);
-  padding: 10px 0 30px 0;
-  border-radius: 5px;
-  margin-bottom: 50px;
-}
-
-.thumbsup {
-  background: #ffffff;
-  margin-right: 10px;
-}
-
-.thumbsup:active,
-.thumbsup:hover,
-.thumbsup:focus {
-  background: #e2f3ff;
-  outline: 0;
-}
-.thumbsup:disabled {
-  opacity: 0.5;
-}
-
-/* button  (default_style)*/
-
-:root {
-  --button-color: #ffffff;
-  --button-bg-color: #0d6efd;
-  --button-hover-bg-color: #025ce2;
-}
-
-.post-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-
-  background: var(--button-bg-color);
-  color: var(--button-color);
-
-  margin: 20px;
-  margin-bottom: 30px;
-  padding: 0.5rem 1rem;
-
-  font-family: "Noto Sans KR", sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  text-align: center;
-  text-decoration: none;
-
-  border: none;
-  border-radius: 4px;
-
-  display: inline-block;
-  width: auto;
-
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-
-  cursor: pointer;
-
-  transition: 0.5s;
-}
-
-button.success {
-  --button-bg-color: #28a745;
-  --button-hover-bg-color: #218838;
-}
-
-button.error {
-  --button-bg-color: #dc3545;
-  --button-hover-bg-color: #c82333;
-}
-
-button.warning {
-  --button-color: #212529;
-  --button-bg-color: #ffc107;
-  --button-hover-bg-color: #e0a800;
-}
-
-button:active,
-button:hover,
-button:focus {
-  background: var(--button-hover-bg-color);
-  outline: 0;
-}
-button:disabled {
-  opacity: 0.5;
-}
-
-form {
+/* form {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   height: 100vh;
-}
+} */
 
-/* React */
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-/* .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  } */
-
-.App-link {
-  color: #ffffff;
-  font-size: 20px;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
