--- a/CWC_project/client/src/views/Home.css
+++ b/CWC_project/client/src/views/Home.css
@@ -13,6 +13,21 @@ body {
 
 /* mainpage web3 logo */
 
+.button-Login {
+  position: absolute;
+  background-color: #0d6efd;
+  color: #fff;
+  top: 10%;
+  left: 82%;
+}
+
+.button-Login:hover {
+  position: absolute;
+  background-color: #0b54c2;
+  top: 10%;
+  left: 82%;
+}
+
 .home-h1-gradient {
   min-height: 50vh;
   display: flex;
